tests/pos/namespace/main.jo
import test

def concat(a: Int, l: test.List[Int]): test.List[Int] = test.Cons(a, l)

def main =
  test.id[Int] 20
  println (test.double 10)
