tests/neg/namespace-redefintion/main.jo
namespace test

def concat(a: Int, l: test.List[Int]): test.List[Int] = #Cons(a, l)

def main =
  println (test.double 10)
